# refusal_direction

./: .gitignore  main.py  pyproject.toml  run.sh
dataset/: generate_datasets.ipynb  load_dataset.py
pipeline/: config.py  run_pipeline.py
pipeline/model_utils/: gemma_model.py  llama2_model.py  llama3_model.py  model_factory.py  qwen_model.py  yi_model.py
pipeline/submodules/: evaluate_jailbreak.py  evaluate_loss.py  generate_directions.py  select_direction.py
pipeline/utils/: hook_utils.py  utils.py
